[gd_scene load_steps=10 format=2]

[ext_resource path="res://Effects/Blood.gd" type="Script" id=1]
[ext_resource path="res://Effects/blood/blood_pool_1.png" type="Texture" id=2]
[ext_resource path="res://Effects/blood/blood_pool_2.png" type="Texture" id=3]
[ext_resource path="res://Effects/blood/blood_pool_tiny.png" type="Texture" id=4]
[ext_resource path="res://Effects/blood/blood_pool_small.png" type="Texture" id=5]
[ext_resource path="res://Effects/blood/blood_pool_small_2.png" type="Texture" id=6]
[ext_resource path="res://Effects/blood/blood_pool_tiny_2.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "visible_blood"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("spr_blood_pool:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Bood" type="Node2D"]
script = ExtResource( 1 )
pool_blood_spr = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ) ]

[node name="BloodParticle" type="CPUParticles2D" parent="."]
z_index = 16
emitting = false
amount = 64
lifetime = 0.18
one_shot = true
explosiveness = 1.0
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.882353, 0.027451, 0.027451, 1 )

[node name="spr_blood_pool" type="Sprite" parent="."]
position = Vector2( 21, 0 )

[node name="detect_blood" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_blood"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/visible_blood = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
